# ET

./: .gitignore  README.md  coke_oven_risk_project_context.md  main.py  pyproject.toml  restart.sh
RAG/: near_miss_2023-001.txt  near_miss_2023-002.txt  near_miss_2023-003.txt  near_miss_2023-004.txt  near_miss_2023-005.txt  near_miss_2023-006.txt  near_miss_2023-007.txt  near_miss_2023-008.txt  near_miss_2023-009.txt  near_miss_2023-010.txt  near_miss_2023-011.txt  near_miss_2023-012.txt  near_miss_2024-013.txt  near_miss_2024-014.txt  near_miss_2024-015.txt  near_miss_2024-016.txt  near_miss_2024-017.txt  near_miss_2024-018.txt
compoundrisk/: __init__.py  constants.py  evaluate.py  export_frontend.py  ml_engine.py  pipeline.py  registry.py  rule_engine.py  scenarios.py  schemas.py  simulate.py  workers.py
data/: evaluation_per_window.csv  evaluation_report.txt  ground_truth_windows.csv  ml_enhanced_risk_output.csv  oven_registry.csv  permit_log.csv  worker_events.csv  worker_occupancy.csv  worker_registry.csv  zone_layout.csv  zone_status.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BuildingShell.tsx  DetailPanel.tsx  Gantry.tsx  Header.tsx  Legend.tsx  OvenBattery.tsx  RestrictedZones.tsx  RiskHeatmap.tsx  (+9 more)
rag_pipeline/: build_index.py  chunk.py  classify.py  embed_store.py  extract.py  llm_client.py  query.py  server.py  synthesize.py  tables.py
tests/: test_integration.py  test_ml_engine.py  test_registry.py  test_rule_engine.py  test_workers.py
(+6 files in other folders)
